--- a/index.css
+++ b/index.css
@@ -1,1 +1,11 @@
+<html>
+  <head>
+    <style>
+    h1 {
+      color: yellow;
+      font-size: 32 pt;
+    }
+    </style>
+  </head>
+    <body> 
 
