--- a/index.css
+++ b/index.css
@@ -4,8 +4,7 @@ h1 {
     }
 body {
       
-      background-image: LightSeaGreen;
-      background-image: ("OceanBackground1.jpg");
+      background-color: LightSeaGreen;
 }
 
 h3 {
