--- a/index.css
+++ b/index.css
@@ -7,6 +7,9 @@ body {
       background-color: LightSeaGreen;
       text-align: center;
 }
+#fastfacts {
+      text-align: left;
+}
 li {
       text-align: left;
 }
