--- a/index.css
+++ b/index.css
@@ -9,6 +9,10 @@ body {
       background-color: LightSeaGreen;
       text-align: center;
 }
+img {
+      width:80%; 
+}
+
 #fastfacts {
       text-align: left;
 }
