--- a/index.css
+++ b/index.css
@@ -15,12 +15,12 @@ img {
 
 #table {
       width: 80%; 
-      border: 1px 
-      cellspacing: 0
+      border: 1px; 
+      cellspacing: 0;
 }
 
 #Pic2 {
-      width = 20%;
+      width = 50%;
 }
 
 #fastfacts {
