--- a/index.css
+++ b/index.css
@@ -14,7 +14,7 @@ img {
 }
 
 #Pic2 {
-      width = 50%;
+      width = 35%;
 }
 
 #fastfacts {
@@ -25,6 +25,7 @@ li {
 }
 #LearnMore, #ReadMore {
       text-align: left;
+      margin: 7px;
 }
 
 h3 {
