--- a/index.css
+++ b/index.css
@@ -32,7 +32,7 @@ h3 {
       color: white;
       text-align: left;
       margin: 7px;
-      font-style: MonotypeCorsiva; 
+      font-family: "Comic Sans MS", cursive;
 }
 
 
